fixing subnav spacing

--- a/src/style.css
+++ b/src/style.css
@@ -14,16 +14,17 @@
     font-weight: normal;
     src: local('Segoe UI Regular'), url('../fonts/Segoe UI.woff') format('woff');
     }
+
   body {
     @apply w-screen fontMontserat;
   }
 
   p {
-    @apply leading-8 tracking-normal text-sm text-black mb-4 pb-4;
+    @apply leading-8 tracking-normal text-sm font-normal mb-4 pb-4;
   }
 
   h1 {
-    @apply max-w-screen-xl py-6 px-3 text-center mb-0 text-4xl font-normal text-black leading-10 fontRoboto;
+    @apply max-w-screen-lg pt-10 pb-0 px-3 text-center mb-0 text-4xl font-normal text-black leading-10 fontRoboto;
   }
 
   h3 {
@@ -35,7 +36,7 @@
   }
 
   header {
-    @apply flex flex-wrap justify-center items-start z-50 relative pt-5 overflow-y-scroll;
+    @apply flex flex-wrap justify-center items-start z-50 relative pt-5 overflow-y-scroll top-0 left-0;
   }
 
   main {
@@ -45,13 +46,11 @@
 
   @screen md {
     p {
-      @apply text-lg;
+      @apply text-base font-medium;
     }
 
-    header {
-      @apply overflow-visible;
-    }
-
+   
+    
     h1 {
       @apply leading-tight text-6xl tracking-tighter;
     }
@@ -68,8 +67,14 @@
 
   @screen lg {
     h1 {
-      @apply p-6;
+      @apply px-16 pt-20;
     }
+
+    header {
+      @apply overflow-visible;
+    }
+
+
   };
 }
 
@@ -80,15 +85,16 @@
   }
 
   .nav-link {
-    @apply pr-3 pl-5 py-3 font-bold text-2xl items-center justify-center text-white;
+    @apply pr-5 pl-6 pb-1 pt-2 font-bold text-3xl items-center justify-center text-white;
   }
 
   .nav-div {
-    @apply fontRoboto items-start flex flex-col;
+    @apply fontRoboto items-start flex flex-col pt-16 pb-16;
   }
 
   .head-header-div {
-    @apply flex max-w-screen-xl w-full flex-col  ml-10 mr-10;
+    @apply flex max-w-screen-xl w-full flex-col ml-5;
+    
   }
 
   .subnav-list{
@@ -96,15 +102,19 @@
   }
 
   .subnav-span{
-    @apply pr-3 py-3 mt-5 font-bold text-2xl items-center justify-center text-white;
+    @apply w-auto pr-3 py-3 mt-5 font-normal text-2xl items-center justify-center text-white;
   } 
 
   .subnav-link {
-    @apply text-base fontRoboto text-white py-3;
+    @apply text-lg fontMontserat text-white font-medium;
+  }
+
+  .subnav-first-li {
+    @apply py-4;
   }
 
   .subnav-li {
-    @apply py-3;
+    @apply py-1;
   }
 
   
@@ -140,7 +150,7 @@
   }
 
   .header-div {
-    @apply flex items-center justify-between px-4 py-3 mx-0 my-auto;
+    @apply flex items-center justify-between px-4 pb-3 pt-0 mx-0 my-auto;
   }
 
   .seo {
@@ -249,31 +259,16 @@
 
   @screen md {
 
-    .nav-link{
-      @apply inline-flex w-auto mt-0 font-normal text-sm;
-    }
-
-    .nav-link:hover {
-      @apply border-t-2 border-gray-700;
-    }
-    .nav-div {
-      @apply inline-flex flex-row ml-auto w-auto h-auto items-center;
-    }
-
     .head-header-div {
-      @apply flex-row pl-6 pr-16;
+      @apply ml-10 mr-10;
+      
     }
-    
+
     .head-div {
       @apply  pr-16;
     }
-
-    .subnav-list{
-      @apply grid gap-4 grid-cols-4;
-    }
   
-  
-    .blogContent-container {
+      .blogContent-container {
       @apply flex flex-row;
     }
 
@@ -326,17 +321,39 @@
       @apply text-lg;
     }
   
-
   };
 
   @screen lg {
+
+    .nav-div {
+      @apply inline-flex flex-row ml-auto w-auto h-auto items-center p-0;
+    }
+    .nav-link{
+      @apply inline-flex w-auto mt-0 font-normal text-base tracking-normal leading-4;
+    }
+
+    .nav-link:hover {
+      @apply border-t-2 border-gray-700;
+    }
+
+    .subnav-list{
+      @apply grid gap-4 grid-cols-4;
+    }
+
+    .subnav-li {
+      @apply py-4;
+    }
+  
+    .head-header-div {
+      @apply flex-row mx-auto pl-6 pr-16 mt-3;
+    }
 
     .head-title-div{
       @apply pl-6 ml-32 mr-24 pr-4;
      }
      
     .head-text-div{
-      @apply  ml-8;
+      @apply  ml-4;
     }
 
     .blogContent-div{
@@ -347,8 +364,7 @@
       @apply pr-16;
     }
 
-    
-    };
+  };
 
 
   @screen sm {
@@ -356,7 +372,6 @@
     .header-div{
       @apply p-0;
     }
-   
   };
 
 }
@@ -393,6 +408,6 @@ header {
   background-color: #262626;
 }
 .wrapper {
-  height:32rem;
+  height:42rem;
   background-color: #1A1A1A
 }
